Fix horizontal scrollbar

--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -200,7 +200,7 @@ time p    {
 			display: block;
 		border: none;
 		position: absolute;
-		right:-2px;
+		right:0;
 		top:100px;
 }
 
